sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Drive_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Nintex_Id__c</fullName>
    <description>LEM-15239: It captures the Id of Drive workflow instance to uniquely identify the source Nintex form.</description>
    <label>Drive Nintex Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>