sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Duplicate_Package_Product__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Package_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13646: It is used to show if duplicate package is added on the same quote and is updated via QCP.</description>
    <label>Duplicate Package Product</label>
    <type>Checkbox</type>
</CustomField>