sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_In_Months</valueSetName>
    </valueSet>
</CustomField>