sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Eligible_location_for_0_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Eligible_location_for_0_Commission_Rate__c</fullName>
    <description>LEM-14395 - Custom/Unique Terms - Attributes</description>
    <inlineHelpText>If offering 0% CR&lt;</inlineHelpText>
    <label>Eligible location for 0% Commission Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Stores (Existing+New)</fullName>
            </value>
            <value>
                <fullName>New Stores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>