sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/ENT_Approval__c.field-meta.xml
<CustomField>
    <fullName>ENT_Approval__c</fullName>
    <description>This field will be used to exclude the CLM users from ENT Templatized cpq approvals</description>
    <formula>IF( AND( $Permission.Ironclad_Workflow_Launch, Account_Primary_Vertical__c=&apos;Rx&apos; ),&apos;No Approval Required&apos;,&apos;Approval Required&apos;)</formula>
    <label>ENT Approval Logic</label>
    <type>Text</type>
</CustomField>