sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Estimated_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Investment__c</fullName>
    <description>LEM-5334: It is used to indicate the total investment by including all the related quote line items.</description>
    <label>Estimated Total Investment</label>
    <summarizedField>SBQQ__QuoteLine__c.Estimated_Total_Investment__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>