sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Evergreen_Promo_Commitment_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Promo_Commitment_Quarterly__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Evergreen Promo Commitment (Quarterly)</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>