sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>LEM-179 – Initial Setup of Quote object</description>
    <label>Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform</valueSetName>
    </valueSet>
</CustomField>