sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Forecasted_VP_Impact_Annual__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_VP_Impact_Annual__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Forecasted VP Impact (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>