sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Franchise_Owned_Store_Count__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Owned_Store_Count__c</fullName>
    <formula>SBQQ__Account__r.Franchise_Owned_Store_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Owned Store Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>