sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Franchise_Supplemental_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Supplemental_Agreement_Link__c</fullName>
    <description>Description: LEM-2018: Create New fields for Nintex processes. This field is to store FSA (Franchisee supplemental agreement URL).</description>
    <label>Franchise Supplemental Agreement Link</label>
    <type>Url</type>
</CustomField>