sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Group__c.field-meta.xml
<CustomField>
    <fullName>Has_Groups__c</fullName>
    <description>LEM-6466: Corporate Cherry-Picking</description>
    <defaultValue>false</defaultValue>
    <label>Has Groups</label>
    <type>Checkbox</type>
</CustomField>