sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Puerto_Rico_Locations__c.field-meta.xml
<CustomField>
    <fullName>Has_Puerto_Rico_Locations__c</fullName>
    <description>LEM-16955: Determines if the Mx is from or has Store(s) in Puerto Rico</description>
    <inlineHelpText>Update the value to Yes if the Mx is from or has Store(s) in Puerto Rico</inlineHelpText>
    <label>Has Puerto Rico Location(s)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>