sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/HasPipelineProduct__c.field-meta.xml
<CustomField>
    <fullName>HasPipelineProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10077 - To identify the quote has Pipeline product. Product Code is 10082</description>
    <label>HasPipelineProduct</label>
    <type>Checkbox</type>
</CustomField>