sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <description>LEM-2601</description>
    <formula>IF(
        Segment__c = $Label.AccountSegmentSMB, &apos;SMB_Quote_Line_Editor_Visible_Fields&apos;,
        IF(
          TEXT(SBQQ__Type__c) = &apos;Amendment&apos;, &apos;Enterprise_Amendment_Line_Editor&apos;,
          &apos;SBQQ__LineEditor&apos;
        )
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Header Field Set</label>
    <type>Text</type>
</CustomField>