sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/In_app_merchandising_Benefit__c.field-meta.xml
<CustomField>
    <fullName>In_app_merchandising_Benefit__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Approved by S&amp;O; E.g., Local banner or carousel inclusion</inlineHelpText>
    <label>In-app merchandising Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>