sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Influencer_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Campaigns__c</fullName>
    <description>LEM-15296: DPEI Attributes</description>
    <label>Influencer Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>