sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Installment_1_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Installment_1_Pay_Period__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Date by which the bonus will be paid out</inlineHelpText>
    <label>Installment 1 Pay Period</label>
    <type>Date</type>
</CustomField>