sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Installment_1_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_1_Payment_Amount__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Installment 1 Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>