sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Installment_2_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Installment_2_Pay_Period__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Installment 2 Pay Period</label>
    <type>Date</type>
</CustomField>