sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>LEM-15348: It is used to capture the source of inbound ingestion payload sent by mulesoft.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
            <value>
                <fullName>Nintex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>