sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2361: Allow user to set payment terms on quote</description>
    <label>Invoicing Payment Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Payment_Account_Relation__c.Record_Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <filterItems>
            <field>Account_Payment_Account_Relation__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <infoMessage>Payment Account for Invoicing</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Payment_Account_Relation__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>