sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Payment_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Payment_Account_ID__c</fullName>
    <description>LEM-2826: Defaulting Payment Terms based on the Payment Account.</description>
    <label>Invoicing Payment Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>