sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Ironclad_WF_Launched__c.field-meta.xml
<CustomField>
    <fullName>Ironclad_WF_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to track that Ironclad WF is launched only once on the quote and it wont be launched again</description>
    <label>Is Ironclad WF Launched</label>
    <type>Checkbox</type>
</CustomField>