sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_A_Deal_Desk_Active_User__c.field-meta.xml
<CustomField>
    <fullName>Is_A_Deal_Desk_Active_User__c</fullName>
    <description>LEM-15216: It is used to bypass validation rules for deal desk team.</description>
    <formula>$Permission.Bypass_Validations_For_Deal_Desk_Team</formula>
    <label>Is A Deal Desk Active User?</label>
    <type>Checkbox</type>
</CustomField>