sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Alcohol_Delivery_Pickup_Exists__c.field-meta.xml
<CustomField>
    <fullName>Is_Alcohol_Delivery_Pickup_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created as part of LEM-17960</description>
    <label>Is Alcohol Delivery / Pickup Exists ?</label>
    <type>Checkbox</type>
</CustomField>