sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Core_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Is_Core_Upgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16229: It is used to check if Core product is added/cloned or not on Amendment</description>
    <label>Is Core Upgraded?</label>
    <type>Checkbox</type>
</CustomField>