sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Defaulting__c.field-meta.xml
<CustomField>
    <fullName>Is_Defaulting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16956</description>
    <label>Is Defaulting</label>
    <type>Checkbox</type>
</CustomField>