sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Drive_Auto_Activation_Supported__c.field-meta.xml
<CustomField>
    <fullName>Is_Drive_Auto_Activation_Supported__c</fullName>
    <description>LEM-2610: Identify if a Drive Products on a Contract are eligible to be auto-activated
LEM-7305: Updated the Field Label and HelpText</description>
    <inlineHelpText>This will override your deal to go through manual activation in the case that the system has determined your deal can go through automation</inlineHelpText>
    <label>Override Drive Auto-Activations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>