sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_this_for_Ads_Promos__c.field-meta.xml
<CustomField>
    <fullName>Is_this_for_Ads_Promos__c</fullName>
    <description>LEM-9455 Used to determine ads Promo Deal</description>
    <label>Is this for Ads &amp; Promos?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>