sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Jira_Request_Ticket_link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Request_Ticket_link__c</fullName>
    <description>LEM-913: Attach Jira Request Ticket and Signed Contract links on the quote</description>
    <label>Jira Request Ticket link</label>
    <type>Url</type>
</CustomField>