sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Jira_Request_Ticket_status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Request_Ticket_status__c</fullName>
    <description>LEM-913: Attach Jira Request Ticket and Signed Contract links on the quote. LEM-18651 remove help text.</description>
    <label>Jira Request Ticket status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jira_Request_Ticket_status</valueSetName>
    </valueSet>
</CustomField>