sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>LEM-13822:Used in QCP for comparing Commission Rates Filter_Value_1__c for CRT Stamping</description>
    <formula>
        IF(
                OR(
                    ISPICKVAL(SBQQ__Opportunity2__r.LeadSource, &quot;Get.doordash.com&quot;),
                    CONTAINS(SBQQ__Opportunity2__r.CreatedBy.FirstName, &quot;Mulesoft &quot;)
                ),
                &quot;SSMO&quot;,
                null
            )
    </formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>