sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/LineSortField__c.field-meta.xml
<CustomField>
    <fullName>LineSortField__c</fullName>
    <description>LEM-16511: It is used to sort quote lines based on product family.</description>
    <formula>&quot;Sort_Order_QL__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LineSortField</label>
    <type>Text</type>
</CustomField>