sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Local_Premium__c.field-meta.xml
<CustomField>
    <fullName>Local_Premium__c</fullName>
    <description>LEM-13822:Used in QCP for comparing Commission Rates Segment for CRT Stamping</description>
    <label>Local Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>