sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Marketing_Prgm_Spend_Commitment_Annual__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Prgm_Spend_Commitment_Annual__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>$ a merchant commits to spend on DoorDash promos annually.</inlineHelpText>
    <label>Mx Promo Spend Commitment (Annually)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>