sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Marketing_Spend_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Spend_Benefit__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Marketing fund to spend on an in-app or OOH marketing activities as DD determines</inlineHelpText>
    <label>Marketing Spend Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>