sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2258: Migrated record fields for Quote and Quote Line</description>
    <label>Migrated Record?</label>
    <type>Checkbox</type>
</CustomField>