sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_Active_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Active_Period__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Minimum Active Period(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>