sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Monitoring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Frequency__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Monitoring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>