sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Mx_Evergreen_promo_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Mx_Evergreen_promo_Commitment__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Mx Evergreen promo Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>