sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Mx_Location_Activation__c.field-meta.xml
<CustomField>
    <fullName>Mx_Location_Activation__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>This is the % of Mx Locations activated and live on the DD platform</inlineHelpText>
    <label>Mx Location Activation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>