sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/New_Store_Expansion_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Store_Expansion_Amount__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>New Store Expansion Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>