sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Use_Case__c</fullName>
    <description>LEM-17162: It captures the "Nintex Use Case" that resulted in the Quote creation through Nintex form submission.</description>
    <label>Nintex Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nintex_Use_Cases</valueSetName>
    </valueSet>
</CustomField>