sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/No_of_days_for_NSE_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_for_NSE_Exclusivity__c</fullName>
    <description>LEM-16860: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>This field should only be used for triggering time-bound Marketing Promo Exclusivities with DoorDash when not already a part of the contract terms (ex. Preferred Partnerships)</inlineHelpText>
    <label># of days for NSE Exclusivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>