sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Non_Productized_Deal_terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Productized_Deal_terms__c</fullName>
    <description>LEM-6756: To properly operationalize Non-Productized deal terms for Drive opportunities.</description>
    <label>Non-Productized Deal terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-time adjustment</fullName>
            </value>
            <value>
                <fullName>TRT Adjustments</fullName>
            </value>
            <value>
                <fullName>BI Script</fullName>
            </value>
            <value>
                <fullName>Drive Ops Monitoring</fullName>
            </value>
            <value>
                <fullName>DAT process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>