sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Non_Standard_Deal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Deal_Terms__c</fullName>
    <description>LEM-451: Indicate if non-productized deal terms are included on Quote</description>
    <label>Non-Standard Deal Terms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>