sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Number of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>