sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <description>LEM-14946: Number of stores to which this deal will apply.</description>
    <inlineHelpText>Number of stores to which this deal will apply</inlineHelpText>
    <label>Number of Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>